# SDLGame

./: .gitignore  CMakeLists.txt  README.md  SDLGame.sln
SDLGame/: Ball.cpp  Ball.h  Bat.cpp  Bat.h  Camera.cpp  Camera.h  Diamond.cpp  Diamond.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Level.cpp  Level.h  Main.cpp  SDLGame.vcxproj  SDLGame.vcxproj.filters  config.ini  imgui.ini
SDLGame/Include/imgui/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp
SDLGame/Include/inih/: INIReader.cpp
SDLGame/levels/: About.cpp  About.h  ILevel.h  MainMenu.cpp  MainMenu.h
SDLGame/managers/: AudioManager.cpp  AudioManager.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  InputManager.cpp  InputManager.h  ScoreManager.cpp  ScoreManager.h  TextureManager.cpp  TextureManager.h  TransitionManager.cpp  TransitionManager.h  config.cpp  config.h
include/: Ball.h  Bat.h  Camera.h  Diamond.h  Entity.h  Game.h  Level.h
include/levels/: ILevel.h  MainMenu.h
include/managers/: AudioManager.h  EntityManager.h  FontManager.h  InputManager.h  ScoreManager.h  TextureManager.h  TransitionManager.h  config.h
resources/: config.ini
src/: Ball.cpp  Bat.cpp  Camera.cpp  Diamond.cpp  Entity.cpp  Game.cpp  Level.cpp  Main.cpp  imgui.ini
src/levels/: About.cpp  MainMenu.cpp
src/managers/: AudioManager.cpp  EntityManager.cpp  FontManager.cpp  InputManager.cpp  ScoreManager.cpp  TextureManager.cpp  TransitionManager.cpp  config.cpp
